nullaway_error_9362B63B-98C2-4C35-853B-3CFA0A3CD8BD.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-jdbc/src/main/java/org/springframework/jdbc/core/ArgumentTypePreparedStatementSetter.java:51: error: [NullAway] dereferenced expression argTypes is @Nullable
				(args != null && args.length != argTypes.length)) {
				                                        ^
    (see http://t.uber.com/nullaway )
